--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.redhat.reproducer</groupId>
-  <artifactId>jsf2-ajax-tabpanel-bug</artifactId>
+  <artifactId>richfaces4-tab-panel-bug-reproducer</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>jsf2-ajax-tabpanel-bug Maven Webapp</name>
+  <name>Richfaces 4 Tab Panel Bug Reproducer Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -37,7 +37,7 @@
   </dependencies>
 
   <build>
-    <finalName>jsf2-ajax-tabpanel-bug</finalName>
+    <finalName>richfaces4-tab-panel-bug-reproducer</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
